# Copyright (C) 2017-2021 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

	- feat: Display some warnings if the compound heterozygosity analysis is not processed
	- feat: Add the "-version" option
	- feat: Take into account of a new format in the downloaded OMIM data (Approuved Gene symbol) 
	- feat: Add bugfix in case of no external BED annotation files used
	- feat: External BED annotation files can now also be used to report any feature overlapped with the SV (even with 1bp overlap)
	- feat: (i) Add the scoring points and (ii) remove gene names redundancy in the "AnnotSV_ranking_criteria" output column
	- feat: Add bugfix concerning the use of the "candidateGenesFiltering" option
	- feat: Include "NA" in the rankFiltering default option (default = "1-5,NA")
	- feat: Add bugfix concerning the use of the "split" annotationMode
	- feat: Last column of the SV input BED file could not have empty values. Replaced with "."
	- feat: Add bugfix to avoid a segmentation fault error with the RE_gene calculation
	- feat: Update of the user header (user column names could not be empty anymore)
	- feat: Definition of the characters used to separate the annotations
	- feat: Add bugfix in section 5 of the SV ranking
	- feat: Set the ACMG_class to "NA" if not defined
	
December 18, 2020, AnnotSV version 3.0
	- Major code rewrite and annotations sources reorganization
		- Significant modification of the annotations column names
	- New SV ranking based on the ACMG guidelines (Riggs et al 2020) as a replacement of the previous ranking (v2.5).
		- Add 3 annotation columns: AnnotSV ranking score; ranking decision criteria; AnnotSV ranking class